--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,8 @@
 # just a flag
 ENV = 'development'
 
+# proxy api
+VUE_APP_PROXY_API = '/dev-api'
+
 # base api
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'http://shop-service.codebreeze.cn/api'
