--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,9 @@
 # just a flag
 ENV = 'production'
 
+# proxy api
+VUE_APP_PROXY_API = '/prod-api'
+
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_API = 'http://shop-service.codebreeze.cn/api'
 
